--- a/index.html
+++ b/index.html
@@ -78,15 +78,16 @@
                 </ul>
                 <ul class="sub-menu">
                     <li>
-                        <a class="linkedin" href="https://www.linkedin.com/in/nand-patel-240876159/" target="_blank">
+                        <a class="linkedin" href="https://www.linkedin.com/in/harsh-prajapati-1780921aa/" target="_blank">
                         </a>
                     </li>
                     <li>
-                        <a class="instagram" href="https://www.instagram.com/nand20_/" target="_blank">
+                        <a class="instagram" href="https://www.instagram.com/_h_a_r_s_h26/
+                        " target="_blank">
                         </a>
                     </li>
                     <li>
-                        <a class="facebook" href="https://www.facebook.com/nandpatel632/" target="_blank">
+                        <a class="facebook" href="https://www.facebook.com/harsh.prajapati.777/" target="_blank">
                         </a>
                     </li>
                 </ul>
